fixed z-index bug

--- a/src/app/Components/Header/Header.component.css
+++ b/src/app/Components/Header/Header.component.css
@@ -17,7 +17,7 @@ mat-toolbar{
   position: sticky;
   position: -webkit-sticky; /* For macOS/iOS Safari */
   top: 0; /* Sets the sticky toolbar to be on top */
-  z-index: 1000;
+  z-index: 3;
   background: white;
   box-shadow: 0;
 
@@ -66,7 +66,6 @@ margin-right: 150px;
   margin-top: 6px;
   background:#FBFBFB;
   min-height: 740px;
-
 }
 
 /* format main container  */
